Kubernetes-config/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: nginx
  rules:
    - host: sapp1.nishantg.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: sapp2.nishantg.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80  
    - host: sapp3.nishantg.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boardgame-ssvc
                port: 
                  number: 80 

  tls:
  - hosts:
    - sapp1.nishantg.shop
    secretName: sapp1-kubeoncloud-secret           
  - hosts:
    - sapp2.nishantg.shop
    secretName: sapp2-kubeoncloud-secret
  - hosts:
    - sapp3.nishantg.shop
    secretName: boardgame2-secret
